# llm_structured_outputs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
