[package]
name = "llm_structured_outputs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "json",
], default-features = false }
schemars = "1.0.0-alpha.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
